--- a/charts/console/templates/secrets.yaml
+++ b/charts/console/templates/secrets.yaml
@@ -1,3 +1,7 @@
+{{ $extraSecretEnv := .Values.extraSecretEnv }}
+{{ if and .Values.dex.clientSecret .Values.dex.enabled }}
+  {{ $extraSecretEnv := omit $extraSecretEnv "OIDC_CLIENT_ID" "OIDC_CLIENT_SECRET" "OIDC_DISCOVERY_URL" }}
+{{ end }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -51,9 +55,14 @@ data:
 {{ if .Values.console.config.artifactsUrl }}
   CONSOLE_ARTIFACTS_URL: {{ .Values.console.config.artifactsUrl | b64enc | quote }}
 {{ end }}
-{{ range $key, $value := .Values.extraSecretEnv }}
+{{ range $key, $value := $extraSecretEnv }}
   {{ $key }}: {{ $value | b64enc | quote }}
 {{ end }}
+{{ if and .Values.dex.clientSecret .Values.dex.enabled }}
+  OIDC_CLIENT_ID: console
+  OIDC_CLIENT_SECRET: {{ .Values.dex.clientSecret | b64enc | quote }}
+  OIDC_DISCOVERY_URL: {{ printf "https://%s/dex/.well-known/openid-configuration" .Values.ingress.console_dns | b64enc | quote }}
+{{ end}}
 {{ if .Values.cloud.pgRootCert }}
 ---
 apiVersion: v1
@@ -93,4 +102,19 @@ data:
 {{ if .Values.secrets.key }}
   key: {{ .Values.secrets.key | b64enc | quote }}
 {{ end }}
+{{ end }}
+{{ if and .Values.dex.clientSecret .Values.dex.enabled }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: dex-env
+  labels:
+{{ include "console.labels" . | indent 4 }}
+type: Opaque
+data:
+  CONSOLE_CLIENT_SECRET: {{ .Values.dex.clientSecret | b64enc | quote }}
+  {{ range $key, $value := .Values.dex.additionalDexSecrets }}
+  {{ $key }}: {{ $value | b64enc | quote }}
+  {{ end }}
 {{ end }}
