--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -44,6 +44,11 @@ jobs:
         python-version: '3.13'
         cache: 'pip' # caching pip dependencies
     
+    - name: Install Helm
+      uses: azure/setup-helm@v3
+      with:
+        version: latest
+    
     - name: Run compatibility matrix updater
       run: |
         cd utils/compatibility
