--- a/static/compatibilities/amazon-vpc-cni-k8s.yaml
+++ b/static/compatibilities/amazon-vpc-cni-k8s.yaml
@@ -47,16 +47,19 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 1.14.0
+  images: []
 - version: 1.13.0
   kube: ['1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
   chart_version: 1.13.0
+  images: []
 - version: 1.12.5
   kube: ['1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
   chart_version: 1.2.7
+  images: []
 - version: 1.11.5
   kube: ['1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23']
   requirements: []
@@ -66,3 +69,4 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 1.1.15
+  images: []
