--- a/static/compatibilities/argo-rollouts.yaml
+++ b/static/compatibilities/argo-rollouts.yaml
@@ -8,28 +8,34 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 2.40.5
+  images: ['quay.io/argoproj/argo-rollouts:v1.8.3']
 - version: 1.8.0
   kube: ['1.31', '1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
-  chart_version: 2.39.0
+  chart_version: 2.39.1
+  images: ['quay.io/argoproj/argo-rollouts:v1.8.0']
 - version: 1.7.0
   kube: ['1.29', '1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   chart_version: 2.36.0
+  images: ['quay.io/argoproj/argo-rollouts:v1.7.0']
 - version: 1.6.0
   kube: ['1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22']
   requirements: []
   incompatibilities: []
   chart_version: 2.32.0
+  images: ['quay.io/argoproj/argo-rollouts:v1.6.0']
 - version: 1.2.0
   kube: ['1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22']
   requirements: []
   incompatibilities: []
   chart_version: 2.12.0
+  images: ['quay.io/argoproj/argo-rollouts:v1.2.0']
 - version: 1.1.0
   kube: ['1.21', '1.20', '1.19', '1.18', '1.17', '1.16']
   requirements: []
   incompatibilities: []
   chart_version: 2.2.0
+  images: ['quay.io/argoproj/argo-rollouts:v1.1.0']
