--- a/static/compatibilities/aws-load-balancer-controller.yaml
+++ b/static/compatibilities/aws-load-balancer-controller.yaml
@@ -2,6 +2,8 @@ icon: https://raw.githubusercontent.com/kubernetes-sigs/aws-load-balancer-contro
 git_url: https://github.com/kubernetes-sigs/aws-load-balancer-controller
 release_url: https://github.com/kubernetes-sigs/aws-load-balancer-controller/releases/tag/v{vsn}
 helm_repository_url: https://aws.github.io/eks-charts
+helm_values: clusterName=example
+chart_name: aws-load-balancer-controller
 versions:
 - version: 2.9.9
   kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
@@ -9,60 +11,70 @@ versions:
   requirements: []
   incompatibilities: []
 - version: 2.9.0
-  kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
-    '1.23', '1.22', '1.21', '1.20', '1.19']
+  kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
+    '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
   chart_version: 1.9.0
+  images: ['public.ecr.aws/eks/aws-load-balancer-controller:v2.9.0']
 - version: 2.8.0
-  kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
-    '1.23', '1.22', '1.21', '1.20', '1.19']
+  kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
+    '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
   chart_version: 1.8.0
+  images: ['public.ecr.aws/eks/aws-load-balancer-controller:v2.8.0']
 - version: 2.7.0
-  kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
-    '1.23', '1.22', '1.21', '1.20', '1.19']
+  kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
+    '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
   chart_version: 1.7.0
+  images: ['public.ecr.aws/eks/aws-load-balancer-controller:v2.7.0']
 - version: 2.6.0
-  kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
-    '1.23', '1.22', '1.21', '1.20', '1.19']
+  kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
+    '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
   chart_version: 1.6.0
+  images: ['public.ecr.aws/eks/aws-load-balancer-controller:v2.6.0']
 - version: 2.5.0
-  kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
-    '1.23', '1.22', '1.21', '1.20', '1.19']
+  kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
+    '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
   chart_version: 1.5.0
+  images: ['public.ecr.aws/eks/aws-load-balancer-controller:v2.5.0']
 - version: 2.4.0
-  kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
-    '1.23', '1.22', '1.21', '1.20', '1.19']
+  kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
+    '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
   chart_version: 1.4.0
+  images: ['602401143452.dkr.ecr.us-west-2.amazonaws.com/amazon/aws-load-balancer-controller:v2.4.0']
 - version: 2.3.0
   kube: ['1.21', '1.20', '1.19', '1.18', '1.17', '1.16']
   requirements: []
   incompatibilities: []
-  chart_version: 1.3.1
+  chart_version: 1.3.2
+  images: ['602401143452.dkr.ecr.us-west-2.amazonaws.com/amazon/aws-load-balancer-controller:v2.3.0']
 - version: 2.2.0
   kube: ['1.21', '1.20', '1.19', '1.18', '1.17', '1.16']
   requirements: []
   incompatibilities: []
-  chart_version: 1.2.0
+  chart_version: 1.2.2
+  images: ['602401143452.dkr.ecr.us-west-2.amazonaws.com/amazon/aws-load-balancer-controller:v2.2.0']
 - version: 2.1.0
-  kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
-    '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17', '1.16', '1.15']
+  kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
+    '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17', '1.16', '1.15']
   requirements: []
   incompatibilities: []
-  chart_version: 1.1.0
+  chart_version: 1.1.1
+  images: ['602401143452.dkr.ecr.us-west-2.amazonaws.com/amazon/aws-load-balancer-controller:v2.1.0']
 - version: 2.0.0
-  kube: ['1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
-    '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17', '1.16', '1.15']
+  kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
+    '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17', '1.16', '1.15']
   requirements: []
   incompatibilities: []
-  chart_version: 0.1.1
+  chart_version: 1.0.6
+  images: ['602401143452.dkr.ecr.us-west-2.amazonaws.com/amazon/aws-load-balancer-controller:v2.0.0']
