--- a/static/compatibilities/istio.yaml
+++ b/static/compatibilities/istio.yaml
@@ -2,82 +2,98 @@ icon: https://raw.githubusercontent.com/pluralsh/plural-artifacts/main/istio/plu
 git_url: https://github.com/istio/istio
 release_url: https://github.com/istio/istio/releases/tag/{vsn}
 helm_repository_url: https://istio-release.storage.googleapis.com/charts
+chart_name: istiod
 versions:
 - version: 1.28.0
   kube: ['1.34', '1.33', '1.32', '1.31', '1.30']
   requirements: []
   incompatibilities: []
   chart_version: 1.28.0
+  images: ['docker.io/istio/pilot:1.28.0']
 - version: 1.27.0
   kube: ['1.33', '1.32', '1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
   chart_version: 1.27.0
+  images: ['docker.io/istio/pilot:1.27.0']
 - version: 1.26.0
-  kube: ['1.32', '1.31', '1.30', '1.29']
+  kube: ['1.33', '1.32', '1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
   chart_version: 1.26.0
+  images: ['docker.io/istio/pilot:1.26.0']
 - version: 1.25.0
   kube: ['1.32', '1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
   chart_version: 1.25.0
+  images: ['docker.io/istio/pilot:1.25.0']
 - version: 1.24.0
   kube: ['1.31', '1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
   chart_version: 1.24.0
+  images: ['docker.io/istio/pilot:1.24.0']
 - version: 1.23.0
   kube: ['1.30', '1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
   chart_version: 1.23.0
+  images: ['docker.io/istio/pilot:1.23.0']
 - version: 1.22.0
   kube: ['1.30', '1.29', 1.28', '1.27']
   requirements: []
   incompatibilities: []
   chart_version: 1.22.0
+  images: ['docker.io/istio/pilot:1.22.0']
 - version: 1.21.0
   kube: ['1.29', 1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   chart_version: 1.21.0
+  images: ['docker.io/istio/pilot:1.21.0']
 - version: 1.20.0
   kube: ['1.28', '1.27', '1.26', '1.25']
   requirements: []
   incompatibilities: []
   chart_version: 1.20.0
+  images: ['docker.io/istio/pilot:1.20.0']
 - version: 1.18.0
   kube: ['1.27', '1.26', '1.25', '1.24']
   requirements: []
   incompatibilities: []
   chart_version: 1.18.0
+  images: ['docker.io/istio/pilot:1.18.0']
 - version: 1.17.0
   kube: ['1.26', '1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
   chart_version: 1.17.0
+  images: ['docker.io/istio/pilot:1.17.0']
 - version: 1.16.0
   kube: ['1.25', '1.24', '1.23', '1.22']
   requirements: []
   incompatibilities: []
   chart_version: 1.16.0
+  images: ['docker.io/istio/pilot:1.16.0']
 - version: 1.14.0
   kube: ['1.24', '1.23', '1.22', '1.21']
   requirements: []
   incompatibilities: []
   chart_version: 1.14.0
+  images: ['docker.io/istio/pilot:1.14.0']
 - version: 1.13.0
   kube: ['1.23', '1.22', '1.21', '1.20']
   requirements: []
   incompatibilities: []
   chart_version: 1.13.0
+  images: ['docker.io/istio/pilot:1.13.0']
 - version: 1.12.0
   kube: ['1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
   chart_version: 1.12.0
+  images: ['docker.io/istio/pilot:1.12.0']
 - version: 1.11.0
   kube: ['1.22', '1.21', '1.20', '1.19', '1.18']
   requirements: []
