--- a/static/compatibilities.yaml
+++ b/static/compatibilities.yaml
@@ -2884,3 +2884,70 @@ addons:
     chart_version: 3.20.6
     images: ['quay.io/tigera/operator:v1.20.9']
   name: tigera-operator
+- icon: https://raw.githubusercontent.com/pluralsh/plural-artifacts/main/argo-cd/plural/icons/argo-stacked-color-square.png?raw=true
+  git_url: https://github.com/argoproj/argo-cd
+  release_url: https://github.com/argoproj/argo-cd/releases/tag/v{vsn}
+  helm_repository_url: https://argoproj.github.io/argo-helm
+  versions:
+  - version: 3.2.0
+    kube: ['1.34', '1.33', '1.32']
+    requirements: []
+    incompatibilities: []
+    chart_version: 9.1.4
+    images: ['quay.io/argoproj/argocd:v3.2.0', 'ecr-public.aws.com/docker/library/redis:8.2.2-alpine',
+      'ghcr.io/dexidp/dex:v2.44.0']
+  - version: 3.1.1
+    kube: ['1.34', '1.33', '1.32']
+    requirements: []
+    incompatibilities: []
+    chart_version: 8.3.3
+    images: ['quay.io/argoproj/argocd:v3.1.1', 'ecr-public.aws.com/docker/library/redis:7.2.8-alpine',
+      'ghcr.io/dexidp/dex:v2.44.0']
+  - version: 3.1.0
+    kube: ['1.33', '1.32', '1.31']
+    requirements: []
+    incompatibilities: []
+    chart_version: 8.3.0
+    images: ['ecr-public.aws.com/docker/library/redis:7.2.8-alpine', 'quay.io/argoproj/argocd:v3.1.0',
+      'ghcr.io/dexidp/dex:v2.43.1']
+  - version: 3.0.0
+    kube: ['1.33', '1.32', '1.31']
+    requirements: []
+    incompatibilities: []
+    chart_version: 8.0.1
+    images: ['public.ecr.aws/docker/library/redis:7.2.8-alpine', 'ghcr.io/dexidp/dex:v2.42.1',
+      'quay.io/argoproj/argocd:v3.0.0']
+  - version: 2.14.11
+    kube: ['1.33', '1.32', '1.31']
+    requirements: []
+    incompatibilities: []
+    chart_version: 7.9.1
+    images: ['quay.io/argoproj/argocd:v2.14.11', 'ghcr.io/dexidp/dex:v2.42.1', 'public.ecr.aws/docker/library/redis:7.2.8-alpine']
+  - version: 2.14.1
+    kube: ['1.32', '1.31', '1.30']
+    requirements: []
+    incompatibilities: []
+    chart_version: 7.8.0
+    images: ['ghcr.io/dexidp/dex:v2.41.1', 'quay.io/argoproj/argocd:v2.14.1', 'public.ecr.aws/docker/library/redis:7.4.2-alpine']
+  - version: 2.13.2
+    kube: ['1.32', '1.31', '1.30']
+    requirements: []
+    incompatibilities: []
+    chart_version: 7.7.12
+    images: ['quay.io/argoproj/argocd:v2.13.2', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
+      'ghcr.io/dexidp/dex:v2.41.1']
+  - version: 2.13.0
+    kube: ['1.31', '1.30', '1.29']
+    requirements: []
+    incompatibilities: []
+    chart_version: 7.7.3
+    images: ['ghcr.io/dexidp/dex:v2.41.1', 'public.ecr.aws/docker/library/redis:7.4.1-alpine',
+      'quay.io/argoproj/argocd:v2.13.0']
+  - version: 2.12.4
+    kube: ['1.31', '1.30', '1.29']
+    requirements: []
+    incompatibilities: []
+    chart_version: 7.6.10
+    images: ['public.ecr.aws/docker/library/redis:7.2.4-alpine', 'quay.io/argoproj/argocd:v2.12.4',
+      'ghcr.io/dexidp/dex:v2.38.0']
+  name: argo-cd
