--- a/plural/helm/console/crds/deployments.plural.sh_globalservices.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_globalservices.yaml
@@ -96,6 +96,7 @@ spec:
                 - GKE
                 - RKE
                 - K3S
+                - OPENSHIFT
                 type: string
               ignoreClusters:
                 description: IgnoreClusters specifies a list of cluster handles to
