--- a/.github/workflows/chart.yaml
+++ b/.github/workflows/chart.yaml
@@ -30,6 +30,7 @@ jobs:
           helm repo add radar https://radar-base.github.io/radar-helm-charts
           helm repo add fluxcd-community https://fluxcd-community.github.io/helm-charts
           helm repo add dashboard https://kubernetes.github.io/dashboard
+          helm repo add dexidp https://charts.dexidp.io
       - name: Run chart-releaser
         id: release
         uses: helm/chart-releaser-action@v1.5.0
