--- a/charts/console-rapid/Chart.yaml
+++ b/charts/console-rapid/Chart.yaml
@@ -20,4 +20,8 @@ dependencies:
     version: 2.14.1
     repository: https://fluxcd-community.github.io/helm-charts
     condition: flux2.enabled
+  - name: dex
+    version: 0.24.0
+    repository: https://charts.dexidp.io
+    condition: dex.enabled
 type: application
